configured webpack to export as a function and to create a smaller bundle.js that is production/deployment ready + added script in package.json to allow webpack to build in production or dev

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "scripts": {
     "server": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
