--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "jest": "23.6.0",
     "raf": "3.3.2",
     "react-test-renderer": "16.0.0",
-    "regenerator-runtime": "^0.13.1"
+    "regenerator-runtime": "0.13.1"
   },
   "dependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-react-jsx": "^7.0.0",
+    "@babel/core": "7.1.6",
+    "@babel/plugin-syntax-object-rest-spread": "7.0.0",
+    "@babel/plugin-transform-react-jsx": "7.0.0",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "babel-cli": "6.26.0",
