--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod",
     "server": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
@@ -45,9 +47,10 @@
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "eslint-config-prettier": "2.9.0",
-    "express": "4.16.3",
+    "express": "^4.16.4",
     "live-server": "1.2.0",
     "lodash.random": "3.2.0",
+    "mini-css-extract-plugin": "0.5.0",
     "moment": "2.22.2",
     "node-sass": "4.9.4",
     "normalize.css": "8.0.0",
