--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod",
-    "server": "live-server public/",
+    "server": "node server/server.js",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -29,7 +29,13 @@
     "jest": "23.6.0",
     "raf": "3.3.2",
     "react-test-renderer": "16.0.0",
-    "regenerator-runtime": "0.13.1"
+    "regenerator-runtime": "0.13.1",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
+    "eslint-config-prettier": "2.9.0",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.10"
   },
   "dependencies": {
     "@babel/core": "7.1.6",
@@ -43,13 +49,7 @@
     "babel-plugin-transform-class-properties": "6.24.1",
     "body-parser": "1.18.3",
     "css-loader": "1.0.1",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
-    "eslint-config-prettier": "2.9.0",
     "express": "4.16.4",
-    "live-server": "1.2.0",
-    "lodash.random": "3.2.0",
     "mini-css-extract-plugin": "0.5.0",
     "moment": "2.22.2",
     "node-sass": "4.9.4",
@@ -66,8 +66,6 @@
     "style-loader": "0.23.1",
     "uuid": "3.3.2",
     "validator": "10.8.0",
-    "webpack": "4.23.1",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.10"
+    "webpack": "4.23.1"
   }
 }
