--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
     "eslint": "5.3.0",
     "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "2.9.0",
     "eslint-config-react": "1.1.7",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
@@ -30,10 +34,6 @@
     "raf": "3.3.2",
     "react-test-renderer": "16.0.0",
     "regenerator-runtime": "0.13.1",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
-    "eslint-config-prettier": "2.9.0",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10"
   },
@@ -54,6 +54,7 @@
     "moment": "2.22.2",
     "node-sass": "4.9.4",
     "normalize.css": "8.0.0",
+    "numeral": "^2.0.6",
     "react": "16.6.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
