--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "body-parser": "1.18.3",
     "css-loader": "1.0.1",
     "express": "4.16.4",
+    "firebase": "4.2.0",
     "mini-css-extract-plugin": "0.5.0",
     "moment": "2.22.2",
     "node-sass": "4.9.4",
