--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-redux": "5.1.0",
     "react-router-dom": "4.2.2",
     "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "uuid": "3.3.2",
