--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "23.6.0",
     "raf": "3.3.2",
     "react-test-renderer": "16.0.0",
+    "redux-mock-store": "1.5.3",
     "regenerator-runtime": "0.13.1",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10"
