Get firebase expenses on start

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "moment": "2.22.2",
     "node-sass": "4.9.4",
     "normalize.css": "8.0.0",
-    "numeral": "^2.0.6",
+    "numeral": "2.0.6",
     "react": "16.6.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
