--- a/.eslintrc
+++ b/.eslintrc
@@ -84,6 +84,7 @@
     "react/jsx-boolean-value": 0,
     "no-case-declarations": 0,
     "react/display-name": 0,
-    "jsx-a11y/no-autofocus": 0
+    "jsx-a11y/no-autofocus": 0,
+    "import/no-named-as-default": 0
   }
 }
