--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "css-loader": "1.0.1",
     "express": "4.16.4",
     "firebase": "4.2.0",
+    "history": "^4.7.2",
     "mini-css-extract-plugin": "0.5.0",
     "moment": "2.22.2",
     "node-sass": "4.9.4",
