--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
     "react-dom": "16.6.0",
+    "react-ga": "^2.5.7",
     "react-modal": "3.6.1",
     "react-redux": "5.1.0",
     "react-router-dom": "4.2.2",
